--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título do Site</title>
+    <title></title>
 </head>
 <body>
     <main>
-        <header><h1>Título do Site</h1></header>
+        <header><h1>Cursos Grátis</h1></header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia incidunt nemo mollitia veritatis ratione distinctio quisquam accusantium magni totam recusandae amet voluptate, explicabo quo tempore est alias voluptatum aperiam architecto.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus voluptatibus porro impedit alias vitae nihil ut itaque nemo eaque? Temporibus adipisci corrupti et vero quibusdam ut ipsam quis repudiandae nam.</p>
         </article>
     </main>
 </body>
