--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <header><h1>Cursos Grátis</h1></header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia incidunt nemo mollitia veritatis ratione distinctio quisquam accusantium magni totam recusandae amet voluptate, explicabo quo tempore est alias voluptatum aperiam architecto.</p>
+            <p>A HTML é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as CSS, criamos as configurações visuais que um site vai ter.</p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus voluptatibus porro impedit alias vitae nihil ut itaque nemo eaque? Temporibus adipisci corrupti et vero quibusdam ut ipsam quis repudiandae nam.</p>
+            <p>JavaScript é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do DOM.</p>
         </article>
     </main>
 </body>
