--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <header><h1>Cursos Grátis</h1></header>
+        <header><h1>Cursos Grátis do Curso em Vídeo</h1></header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
             <p>A HTML é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as CSS, criamos as configurações visuais que um site vai ter.</p>
